# zoo-argowf-runner

./: CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  contributing.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: bump_version.py
.github/workflows/: package.yaml
tests/: test_placeholder.py  tests_water_bodies_cloud_native.py  tests_water_body.py
tests/water_bodies/: service.py
tests/water_bodies_cloud_native/: service.py
zoo_argowf_runner/: argo_api.py  cwl2argo.py  handlers.py  runner.py  template.py  volume.py  zoo_helpers.py
