[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoo-argowf-runner"
description = "ZOO-Projecr runner using Argo Workflows to process an Application Package encoded in CWL."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "zoo-runner-common",
    "PyYAML",
    "hera",
    "cwl-utils",
    "click",
    "cwl-utils>=0.14",
    "attrs",
    "loguru"
]


[tool.hatch.version]
path = "zoo_argowf_runner/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "zoo-runner-common",
    "PyYAML",
    "hera",
    "cwl-utils",
    "click",
    "cwl-utils>=0.14",
    "attrs",
    "loguru"
]

[tool.hatch.envs.test]
dependencies = [
    "zoo-runner-common",
    "nose2",
    "PyYAML",
    "hera",
    "cwl-utils",
    "click",
    "cwl-utils>=0.14",
    "attrs",
    "loguru"
]
